# codex-skills

./: .gitignore  README.ko.md  README.md
skills/animation-creator/: SKILL.md  pyproject.toml
skills/animation-creator/agents/: openai.yaml
skills/animation-creator/references/: animation-output-contract.md  prompt-patterns.md  qa-rubric.md
skills/animation-creator/scripts/: animation_common.py  build_generation_prompt.py  compose_animation.py  extract_frames.py  finalize_animation_run.py  make_contact_sheet.py  prepare_animation_run.py  record_animation_result.py  rembg_runtime.py  render_preview.py  validate_animation.py
skills/epub-translator/: SKILL.md
skills/epub-translator/agents/: openai.yaml
skills/epub-translator/scripts/: epub_translate.py
skills/gomoku/: SKILL.md
skills/gomoku-codex/: SKILL.md
skills/gomoku-codex/agents/: openai.yaml
skills/gomoku-codex/scripts/: gomoku_gui.py
skills/gomoku/agents/: openai.yaml
skills/image-creator/: SKILL.md  pyproject.toml
skills/image-creator/agents/: openai.yaml
skills/image-creator/scripts/: save_generated_image.py
skills/mafia-game/: SKILL.md
skills/minecraft-steward/: SKILL.md
skills/podcast-writer/: SKILL.md
skills/subagent-creator/: SKILL.md
skills/ui-blueprint/: SKILL.md
skills/world-simulator/: SKILL.md
tests/: test_animation_creator.py  test_epub_translator.py  test_gomoku_gui.py  test_image_creator_skill_text.py  test_mafia_game_server.py  test_podcast_writer.py  test_save_generated_image.py  test_validate_agent_toml.py  test_world_simulator_gui.py
(+36 files in other folders)
