[project]
name = "codex-skill-image-creator"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "onnxruntime>=1.23.2; sys_platform != 'linux' or platform_machine != 'x86_64'",
  "onnxruntime-gpu>=1.23.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "pillow>=12.0.0",
  "rembg[cli]>=2.0.76",
]

[tool.uv]
package = false
